/*
 * Copyright (c) 2020 Bytedance Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * @author Zhao Zhang, Yuhui Su
 */


apply plugin: 'com.android.library'

configurations {
    thirdPartDependencies {
        canBeResolved = true
        canBeConsumed = false
        extendsFrom configurations.implementation
    }
}

// 构建时版本戳：3.0.年(26).月日(0208).时分(1533)-git
def fastbotBuildVersion() {
    return "3.0." + new Date().format('yy.MMdd.HHmm', TimeZone.getDefault()) + "-git"
}

android {
    compileSdkVersion 32
    namespace 'com.android.commands.monkey'

    defaultConfig {
        minSdkVersion 22
        targetSdkVersion 32
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
        ndk {
            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
        }
        buildConfigField "String", "FASTBOT_VERSION", "\"${fastbotBuildVersion()}\""
    }

    buildFeatures {
        buildConfig true
    }
    buildTypes {
        debug{
            debuggable true
        }
        release {
            minifyEnabled false
        }
    }

    lintOptions {
        abortOnError false
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

    // native .so 由 android/native/build_native.sh 单独构建，此处不配置 CMake，避免依赖 SDK 中 CMake 版本
    packagingOptions {
        jniLibs {
            useLegacyPackaging false
        }
    }
}

repositories {
    maven {
        url "https://dl.google.com/dl/android/maven2/"
    }
}

dependencies {
    compileOnly files('libs/framework.jar')
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'com.squareup.okhttp3:okhttp:3.12.12'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.12'
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
}

gradle.projectsEvaluated {
    tasks.withType(JavaCompile).tap {
        configureEach {
            Set<File> fileSet = options.bootstrapClasspath.getFiles()
            List<File> newFileList = new ArrayList<File>()
            newFileList.add(new File("libs/framework.jar"))
            newFileList.addAll(fileSet)
            options.bootstrapClasspath = files(newFileList.toArray())
        }
    }
}

task clearJar(type: Delete) {
    delete 'build/libs/monkey.jar'
}

task makeJar(type: Jar) {
    def srcPath = 'build/intermediates/aar_main_jar/debug/'
    def fileMonkey = file(srcPath + "classes.jar")
    from zipTree(fileMonkey)
    archiveBaseName = 'monkey'
    destinationDirectory = file("build/libs/")
}

makeJar.dependsOn(clearJar, assemble)

task makeThirdPartJar(type: Jar) {
    description = 'Merge all runtime dependencies into kea2-third-party.jar'
    from {
        configurations.thirdPartDependencies.collect { dependency ->
            dependency.isDirectory() ? dependency : zipTree(dependency)
        }
    }

    archiveBaseName = 'kea2-thirdpart'
    destinationDirectory = file("$buildDir/libs")
}

tasks.assemble.finalizedBy makeThirdPartJar
